@startuml

title __ADPTER's Class Diagram__\n

  namespace com.example.finalproject {
    namespace adpter {
      class com.example.finalproject.adpter.Admin_allAdapter {
          ~ arrayList : ArrayList<ItemList>
          ~ context : Context
          ~ filter : ArrayList<ItemList>
          + Admin_allAdapter()
          + getFilter()
          + getItemCount()
          + onBindViewHolder()
          + onCreateViewHolder()
          + removeAt()
          + update_del_items()
      }
    }
  }
  

  namespace com.example.finalproject {
    namespace adpter {
      class com.example.finalproject.adpter.Admin_allAdapter.ViewHolder {
          + delete : TextView
          + discraption : TextView
          + edit : TextView
          + item_pic : ImageView
          + tital : TextView
          + ViewHolder()
      }
    }
  }
  

  namespace com.example.finalproject {
    namespace adpter {
      class com.example.finalproject.adpter.Issue_bookAdapter {
          ~ arrayLists : ArrayList<IssuedList>
          ~ context : Context
          + Issue_bookAdapter()
          + getItemCount()
          + onBindViewHolder()
          + onCreateViewHolder()
      }
    }
  }
  

  namespace com.example.finalproject {
    namespace adpter {
      class com.example.finalproject.adpter.Issue_bookAdapter.ViewHolder {
          + discraption : TextView
          + item_pic : ImageView
          + textView : TextView
          + tital : TextView
          ~ edit_delte : LinearLayout
          + ViewHolder()
      }
    }
  }
  

  namespace com.example.finalproject {
    namespace adpter {
      class com.example.finalproject.adpter.Show_item_detail {
          ~ confirm : Button
          ~ discraption : TextView
          ~ issuedate : TextView
          ~ item_pic : ImageView
          ~ retrun_date : TextView
          ~ tital : TextView
          - mDay : int
          - mMonth : int
          - mYear : int
          # onCreate()
      }
    }
  }
  

  namespace com.example.finalproject {
    namespace adpter {
      class com.example.finalproject.adpter.User_item_Adapter {
          ~ arrayList : ArrayList<ItemList>
          ~ context : Context
          ~ filter : ArrayList<ItemList>
          + User_item_Adapter()
          + getFilter()
          + getItemCount()
          + onBindViewHolder()
          + onCreateViewHolder()
      }
    }
  }
  

  namespace com.example.finalproject {
    namespace adpter {
      class com.example.finalproject.adpter.User_item_Adapter.ViewHolder {
          + delete : TextView
          + discraption : TextView
          + edit : TextView
          + item_pic : ImageView
          + tital : TextView
          + ViewHolder()
      }
    }
  }
  

  com.example.finalproject.adpter.Admin_allAdapter .up.|> android.widget.Filterable
  com.example.finalproject.adpter.Admin_allAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.finalproject.adpter.Admin_allAdapter +-down- com.example.finalproject.adpter.Admin_allAdapter.ViewHolder
  com.example.finalproject.adpter.Admin_allAdapter.ViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.example.finalproject.adpter.Issue_bookAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.finalproject.adpter.Issue_bookAdapter +-down- com.example.finalproject.adpter.Issue_bookAdapter.ViewHolder
  com.example.finalproject.adpter.Issue_bookAdapter.ViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.example.finalproject.adpter.Show_item_detail -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.finalproject.adpter.User_item_Adapter .up.|> android.widget.Filterable
  com.example.finalproject.adpter.User_item_Adapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.finalproject.adpter.User_item_Adapter +-down- com.example.finalproject.adpter.User_item_Adapter.ViewHolder
  com.example.finalproject.adpter.User_item_Adapter.ViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
